<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Shop1">

    <TextView
        android:id="@+id/txtShop1"
        android:layout_width="334dp"
        android:layout_height="71dp"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:text="@string/txtShop1"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtAddress1"
        android:layout_width="293dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:text="@string/txtAddress1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtShop1" />

    <ImageView
        android:id="@+id/imgShop1"
        android:layout_width="327dp"
        android:layout_height="286dp"
        android:contentDescription="@string/description1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAddress1"
        app:srcCompat="@drawable/brewbar" />
</androidx.constraintlayout.widget.ConstraintLayout>